--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <title>My resume</title>
+    <title>Yevhen-Zhdanov</title>
   </head>
   <body>
     <!-- main container-->
@@ -117,9 +117,6 @@
                 <span class="soft-skills-text"> Scrum </span>
               </li>
               <li class="soft-skills-item">
-                <span class="soft-skills-text"> Agile</span>
-              </li>
-              <li class="soft-skills-item">
                 <span class="soft-skills-text"> GTD</span>
               </li>
               <li class="soft-skills-item">
@@ -141,16 +138,24 @@
             <h3 class="language-title">Language knowledge</h3>
             <ul>
               <li class="language-item">
-                <span class="language-text"> English - beginner </span>
+                <span class="language-text"
+                  >English<span class="times"> | beginner</span></span
+                >
               </li>
               <li class="language-item">
-                <span class="language-text"> Italian - average</span>
+                <span class="language-text"
+                  >Italian<span class="times"> | average</span></span
+                >
               </li>
               <li class="language-item">
-                <span class="language-text"> Russian - advanced</span>
+                <span class="language-text"
+                  >Russian<span class="times"> | advanced</span></span
+                >
               </li>
               <li class="language-item">
-                <span class="language-text"> Ukrainian - fluent</span>
+                <span class="language-text">
+                  Ukrainian<span class="times"> | fluent</span></span
+                >
               </li>
             </ul>
           </div>
@@ -180,19 +185,19 @@
             Practical application of modern web technologies:
             <li class="projects-item">
               <a
-                class="projects-title-one"
+                class="projects-title-one special"
                 href="https://iradevis.github.io/tasty-ice-cream/
                 "
                 >IceCream
               </a>
               <span class="dots">.............................</span>
               <span class="projects-title-one">
-                <b>[</b> Team layout project using HTML5, CSS3 <b>]</b>.
+                <b>[</b> Team layout project using HTML5, CSS3, JS <b>]</b>.
               </span>
             </li>
             <li class="projects-item">
               <a
-                class="projects-title-one"
+                class="projects-title-one special"
                 href="https://zhdanov-eugene.github.io/goit-markup-hw-08/
                 "
                 >WebStudio
@@ -225,9 +230,9 @@
               Poltava Court of Appeal -
               <span class="profession-company"> Judge's assistant.</span>
             </h4>
-            <span class="profession-time">
+            <span class="times">
               May 2019 - up to now
-              <span class="profession-divider"> | </span> Ukraine
+              <span class="divider"> | </span> Ukraine
             </span>
 
             <ul class="profession-duties">
@@ -252,9 +257,9 @@
                 Secretary of court hearings.
               </span>
             </h4>
-            <span class="profession-time">
+            <span class="times">
               July 2012 - February 2015, December 2018 - May 2019
-              <span class="profession-divider"> | </span> Ukraine
+              <span class="divider"> | </span> Ukraine
             </span>
 
             <ul class="profession-duties">
@@ -276,9 +281,9 @@
                 Electric welder on automatic and semi-automatic machines.
               </span>
             </h4>
-            <span class="profession-time">
+            <span class="times">
               February 2012 - May 2012
-              <span class="profession-divider"> | </span> Ukraine
+              <span class="divider"> | </span> Ukraine
             </span>
 
             <ul class="profession-duties">
@@ -299,9 +304,9 @@
               <img class="photo-GoIT" src="./img/Go-IT.jpg" alt="photo-GoIT" />
               - start your career in IT.
             </h4>
-            <span class="education-time">
+            <span class="times">
               October 2020 - up to now
-              <span class="education-divider"> | </span> Ukraine.
+              <span class="divider"> | </span> Ukraine.
             </span>
 
             <ul class="education-duties">
@@ -314,9 +319,9 @@
             <h4 class="education-title">
               Kharkiv National University of Internal Affairs.
             </h4>
-            <span class="education-time">
+            <span class="times">
               September 2011 - June 2014
-              <span class="education-divider"> | </span> Ukraine.
+              <span class="divider"> | </span> Ukraine.
             </span>
 
             <ul class="education-duties">
@@ -331,9 +336,9 @@
               Agrarian College of Management and Law of Poltava State Agrarian
               Academy.
             </h4>
-            <span class="education-time">
+            <span class="times">
               September 2009 - June 2011
-              <span class="education-divider"> | </span> Ukraine.
+              <span class="divider"> | </span> Ukraine.
             </span>
 
             <ul class="education-duties">
@@ -345,9 +350,9 @@
 
           <div class="company-container">
             <h4 class="education-title">Poltava Professional Lyceum № 1.</h4>
-            <span class="education-time">
+            <span class="times">
               September 2008 - June 2009
-              <span class="education-divider"> | </span> Ukraine.
+              <span class="divider"> | </span> Ukraine.
             </span>
 
             <ul class="education-duties">
