--- a/index.html
+++ b/index.html
@@ -209,8 +209,20 @@
               </span>
             </li>
             <li class="projects-item">
+              <a
+                class="projects-title-one special"
+                href="https://yourlexs.github.io/event-booster-project/
+                "
+                >Event booster
+              </a>
+              <span class="dots">...................</span>
+              <span class="projects-title-one">
+                <b>[</b> Team layout project using JavaScript, HTML, CSS(SASS), Handlebars, Parcel, Git... <b>]</b>.
+              </span>
+            </li>
+            <li class="projects-item">
               <span class="projects-title-one">To be continued</span>
-              <span class="dots">.............</span>
+              <span class="dots">...............</span>
               <span class="projects-title-one">
                 <b>[</b>
                 Projects using JavaScript, React.js, Node.js <b>]</b>.
