--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-https://drive.google.com/file/d/1r5aSu3Qt_Pr7qtejTlHT10DegDKauBM3/view?usp=drivesdk<!DOCYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,16 @@ https://drive.google.com/file/d/1r5aSu3Qt_Pr7qtejTlHT10DegDKauBM3/view?usp=drive
     <title>Yevhen Zhdanov</title>
   </head>
   <body>
-    
-    
+    <div>
+      <img src="./img/Yevhenii Zhdanov.png" alt="photo" />
+      <a
+        class="btn btn-danger"
+        role="button"
+        href="/Yevhenii Zhdanov.pdf"
+        download="proposed_file_name"
+      >
+        Download
+      </a>
+    </div>
   </body>
 </html>
