--- a/index.html
+++ b/index.html
@@ -27,5 +27,32 @@
         Download
       </a>
     </div>
+    <div class="wrapper">
+      <aside class="sidebar">
+        <img
+          class="my-photo"
+          src="./img/Yevhenii Zhdanov.png"
+          alt=" My photo"
+        />
+        <div>
+          <!--Contacts container-->
+          <div class="contacts-container">
+            <ul>
+              <li class="list">
+                <a
+                  title="certificat"
+                  class="contacts-link btn"
+                  role="button"
+                  href="/Yevhenii Zhdanov.pdf"
+                  download="proposed_file_name"
+                >
+                  <span>Download</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
   </body>
 </html>
