new style and html

--- a/index.html
+++ b/index.html
@@ -17,21 +17,11 @@
   </head>
   <body>
     <div>
-      <img src="./img/Yevhenii Zhdanov.png" alt="photo" />
-      <a
-        class="btn btn-danger"
-        role="button"
-        href="/Yevhenii Zhdanov.pdf"
-        download="proposed_file_name"
-      >
-        Download
-      </a>
-    </div>
     <div class="wrapper">
       <aside class="sidebar">
         <img
           class="my-photo"
-          src="./img/Yevhenii Zhdanov.png"
+          src="./img/Yevhenii-Zhdanov.png"
           alt=" My photo"
         />
         <div>
@@ -44,7 +34,7 @@
                   class="contacts-link btn"
                   role="button"
                   href="/Yevhenii Zhdanov.pdf"
-                  download="proposed_file_name"
+                  download="Yevhenii Zhdanov certificat"
                 >
                   <span>Download</span>
                 </a>
