--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </ul>
           </div>
         </div>
+        <img class="my-photo" src="./img/Zhdanov-certificate.png" alt="photo" />
       </aside>
     </div>
   </body>
